--- a/express_backend/package.json
+++ b/express_backend/package.json
@@ -11,13 +11,17 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@fluidjs/multer-cloudinary": "^1.0.4",
     "axios": "^1.12.2",
+    "cloudinary": "^2.7.0",
     "connect-flash": "^0.1.1",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.21.2",
     "express-session": "^1.18.2",
     "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
